<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="dekz.traviscoveralls.MainActivity">

        <LinearLayout
            android:layout_alignParentTop="true"
            android:padding="10dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:inputType="numberDecimal"
                android:id="@+id/etNum1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Number 1" />

            <EditText
                android:inputType="numberDecimal"
                android:id="@+id/etNum2"
                android:hint="Number 2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:textSize="11sp"
                android:layout_marginTop="15dp"
                android:text="Result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tvHasil"
                android:text="0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btnTambah"
                    android:layout_weight="0.5"
                    android:text="addition"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/btnKurang"
                    android:layout_weight="0.5"
                    android:text="substraction"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btnKali"
                    android:layout_weight="0.5"
                    android:text="multiplication"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/btnBagi"
                    android:layout_weight="0.5"
                    android:text="division"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>


        </LinearLayout>

    </RelativeLayout>

</layout>

